Added article from jasper van der jeugt, some cleanup

--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -412,6 +412,8 @@ Posts in each section are roughly ordered by difficulty.
 \input{alexis_king.tex}
 
 
+\input {jasper_van_der_jeugt.tex}
+
 
 
 \part{Posts on testing}
