Added new articles

--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -415,6 +415,15 @@ Posts in each section are roughly ordered by difficulty.
 \input {jasper_van_der_jeugt.tex}
 
 
+\input {tom_ellis.tex}
+
+\input{michael_snoyman.tex}
+
+
+\input{matt_parsons2.tex}
+
+
+
 
 \part{Posts on testing}
 
