--- a/matt_parsons.tex
+++ b/matt_parsons.tex
@@ -186,6 +186,8 @@ By restricting our past, we gain freedom in the future.
 
 
 \chapter{Keep your types small\ldots and your bugs smaller - Matt Parsons}
+\label{sec:keep_your_types_small}
+
 
 In my previous article ``Type Safety Back and Forth'' (\ref{sec:type_safety_back_and_forth}), I discussed two different techniques for bringing type safety to programs that may fail. On the one hand, you can push the responsibility forward. This technique uses types like \texttt{Either} and \texttt{Maybe} to report a problem with the inputs to the function. Here are two example type signatures:
 
